--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@ Visual.p2\Prakt2-3\build-QSourceHighlite-Desktop_Qt_5_12_4_MinGW_64_bit-Debug
 Операционные системы
 Visual.p2
 ММО
-FaLP
+FaLP/Лекции/Видеозаписи лекций/Лекция 1 (01.09.2025).mp4
