--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,5 @@ Visual.p2\Prakt2-3\build-QSourceHighlite-Desktop_Qt_5_12_4_MinGW_64_bit-Debug
 РосТРПО
 Экономика
 Философия
-Операционные системы
 FaLP/Лекции/Видеозаписи лекций/Лекция 1 (01.09.2025).mp4
+Операционные системы/Лекции/Лекция 1 (01.09.2025).mp4
